--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Post#index</h1>
-<p>Go back to user <a href="http://localhost:3000/users/index">here</a></p>
+<div class="user-container">
+        <div class="user-img">
+       <img src=<%= 'https://icon-library.com/images/user-profile-icon/user-profile-icon-23.jpg' %> >
+      </div>
+      <h2><%= @user.name%></h2>
+      <p>Number of posts: <%= @user.posts.size %></p>
+    </div>
+  </div>
+
+<% @posts.each do |post| %>
+  <div class="user-container">
+    <div class="post-data">
+     <%= link_to "#{post.title}", user_post_path(@user.id, post.id), class:"post-title" %> 
+     <h3><%= post.text%></h3>
+      <h5>Number of comments: <%= post.comments.size %> <span>Number of likes: <%= post.likes_counter %></span></h5>
+    </div>
+  </div>
+  <div class="commentaire">
+    <% post.recent_comments.each do |comment| %>
+       <p><%= comment.author.name%>: <%= comment.text%></p>
+    <%end%>
+  </div>
+<%end%>
+<div class="button-div">
+  <button class="button">
+    Pagination
+  </button>
+</div>
