--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Post#show</h1>
-<p>Go back to user <a href="http://localhost:3000/users/index">here</a></p>
+<div class="user-container">
+<div class="user-posts">
+  <h2><%= @post.title %> by <span><%= @post.author.name %></span></h2>
+  <h5 class = "post-comment">Comment <%= @post.comments.size%>,  <span>Likes <%= @post.likes_counter%></span></h5>
+  <p><%= @post.text %></p>
+</div>
+</div>
+<div>
+<div class="comments">
+<% @comments.each do |comment| %>
+   <p><%= comment.author.name%>: <%= comment.text%></p>
+<%end%>
+</div>
+</div>
