--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,29 @@
-<h1>User#Show</h1>
-<p>Go to posts <a href="/users/index/posts">here</a></p>
+<div class="user-container">
+  <div class="user-img">
+    <img src=<%= 'https://icon-library.com/images/user-profile-icon/user-profile-icon-23.jpg' %> >
+  </div>
+  <div class="user-data">
+    <h2><%= @user.name%></h2>
+    <p>Number of posts: <%= @user.posts.size %></p>
+  </div>
+</div>
+
+<div class="user-container-2">
+  <div class="user-data-2">
+    <h2>Bio</h2>
+    <p class="bio"><%= @user.bio%></p>
+  </div>
+</div>
+
+<% @user.recent_posts.each do |post| %>
+  <div class="comment-container">
+      <h4>Post : <%= post.title%></h4>
+      <p><%= post.text%></p>
+      <p>Comment <%= post.comments.size%>,  <span>Likes <%= post.likes_counter%></span></p>
+  </div>
+<%end%>
+
+  <button class="button">
+      <%= link_to "See all posts", user_posts_path(@user), {:class => "button_class"} %>
+  </button>
+
