--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,16 @@
-<div class="user-container">
+<div class="container">
+<div class="comment-container">
 <div class="user-posts">
   <h2><%= @post.title %> by <span><%= @post.author.name %></span></h2>
-  <h5 class = "post-comment">Comment <%= @post.comments.size%>,  <span>Likes <%= @post.likes_counter%></span></h5>
+  <h6 class = "post-comment">Comments <%= @post.comments.size%>,  <span>Likes <%= @post.likes_counter%></span></h6>
   <p><%= @post.text %></p>
 </div>
 </div>
 <div>
-<div class="comments">
+<div class="comment-container">
 <% @comments.each do |comment| %>
    <p><%= comment.author.name%>: <%= comment.text%></p>
 <%end%>
+</div>
 </div>
 </div>
