Add styles for form

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -28,12 +28,12 @@
   margin-top: 20px;
 }
 
-.button {
+/* .button {
   margin-top: 20px;
   width: 20%;
-}
+} */
 
-.btn {
+.btn-space {
   display: flex;
   justify-content: center;
 }
