--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -14,3 +14,15 @@
   justify-content: flex-end;
   margin-top: -38px;
 }
+
+.form-floating {
+  margin-top: 20px;
+}
+
+.form-control {
+  margin-top: 20px;
+}
+
+.btn {
+  margin-top: 20px;
+}
