--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,9 +26,7 @@
   </div>
 <%end%>
  <div class="btn">
-  <button class="button">
-      <%= link_to "See all posts", user_posts_path(@user), {:class => "button_class"} %>
-  </button>
+      <%= link_to "See all posts", user_posts_path(@user), {:class => "btn btn-success"} %>
   </div>
 </div>
 </div>
