--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,6 +6,10 @@
   <p><%= @post.text %></p>
 </div>
 </div>
+
+ <%= form_with url:post_likes_path(@post.id), scope: :like do |form| %>
+    <%= form.submit "Like ", class: "btn btn-info"%>
+  <% end %>
 <div>
 <div class="comment-container">
 <% @comments.each do |comment| %>
@@ -13,4 +17,17 @@
 <%end%>
 </div>
 </div>
+<%= form_with url: post_comments_path(@post.id), scope: :comment do |form| %>
+<div class="form-floating">
+  <div class="text">
+   <%= form.text_area :text, class:'form-control', placeholder: "Type here...", rows: 6, required: true %>
+  </div>
+   <%= form.submit "Comment", class: "btn btn-success" %>
+  </div>
+<% end %>
 </div>
+
+<%# <div class="form-floating">
+  <textarea class="form-control" placeholder="Leave a comment here" ></textarea>
+  <label for="floatingTextarea">Comments</label>
+</div> %>
