--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,6 @@
+<div class="nav-item">
+    <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'nav-link'  %>
+  </div>
 <% @users.each do |user| %>
 <div class="container">
   <div class="row">
