--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,11 +11,17 @@
     <%= form.submit "Like ", class: "btn btn-info"%>
   <% end %>
 <div>
-<div class="comment-container">
-<% @comments.each do |comment| %>
-   <p><%= comment.author.name%>: <%= comment.text%></p>
-<%end%>
-</div>
+  <div class="comment-container">
+  <% @comments.each do |comment| %>
+    <p><%= comment.author.name%>: <%= comment.text%></p>
+     <% if can? :destroy, comment %>
+    <div class="btn">
+       <%= button_to "Delete Comment", "/users/:author_id/posts/#{params[:id]}", method: :delete, params: { post_id: @post.id }, class: "btn btn-danger" %>
+     </div>
+    <%end%>
+  <%end%>
+
+  </div>
 </div>
 <%= form_with url: post_comments_path(@post.id), scope: :comment do |form| %>
 <div class="form-floating">
@@ -26,8 +32,3 @@
   </div>
 <% end %>
 </div>
-
-<%# <div class="form-floating">
-  <textarea class="form-control" placeholder="Leave a comment here" ></textarea>
-  <label for="floatingTextarea">Comments</label>
-</div> %>
